# KBinsight

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  install_debian_dependencies.sh
src/: main.rs  main_window.rs  plot_widget.rs
src/main_window/: mod.rs  model.rs  view.rs
src/plot_widget/: model.rs
