[package]
name = "new_ui"
version = "0.1.0"
authors = ["Andrea Catalini (qwmj48) <qwmj48@motorolasolutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced = {version = "0.1.1", features = ["glow"]}
# iced = "0.1.1"
iced = { git = "https://github.com/hecrj/iced", features = ["glow"]}
iced_native = "^0.2"
